Code clean up.
Signed-off-by: Presti <dxssucuk@hotmail.com>